Fixed project title font weights and spacing.

--- a/assets/bem-entities/additional-sample/__title/additional-sample__title.css
+++ b/assets/bem-entities/additional-sample/__title/additional-sample__title.css
@@ -1,6 +1,14 @@
 .additional-sample__title {
   font-family: 'Lato', sans-serif;
-  font-weight: 400;
+  font-weight: 700;
   margin: 0;
   text-align: center;
+}
+
+@media (min-width: 992px) {
+
+  .additional-sample__title {
+    font-weight: 400;
+  }
+  
 }
