--- a/assets/bem-entities/widescreen-project/__title/widescreen-project__title.css
+++ b/assets/bem-entities/widescreen-project/__title/widescreen-project__title.css
@@ -2,7 +2,7 @@
   color: #fff;
   font-family: 'Lato', sans-serif;
   font-weight: 600;
-  margin: 0;
+  margin: 0 0 16px 0;
   text-align: center;
 }
 
@@ -10,6 +10,7 @@
 
   .widescreen-project__title {
     color: #808080;
+    margin: 0;
   }
 
 }
